--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
 .venv
 .vscode
 __pycache__
+
+# Python build artifacts
+build/
+dist/
+*.egg-info/
+.eggs/
+# Byte-compiled / cache
+__pycache__/
+*.py[cod]
+# Installer logs
+pip-log.txt
+# Unit test / coverage
+htmlcov/
+.tox/
+.nox/
+.coverage
+.cache
+# VSCode
+.vscode/
+# Virtual environments
+.venv/
+ENV/
+venv/
+# Misc
+*.log
