Add runtime theme toggle and MQTT transport options
Enables switching between light and dark UI themes at runtime in both client and listener, with the selected theme persisted in config and selectable via a command line argument.
Adds support for specifying MQTT transport protocol (TCP or websockets) via config and command line, updates related documentation, and streamlines Docker/cloudflared instructions for websockets.
Improves usability and future-proofs configuration for broader MQTT and UI options.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             "module": "presentation_clicker_client.ui_client",
             "justMyCode": true,
             "cwd": "${workspaceFolder}/presentation_clicker_client",
-            "args": ["--open-config-dir"]
+            // "args": ["--open-config-dir"]
         },
         {
             "name": "Run Listener as Module",
