--- a/docker/mosquitto.conf
+++ b/docker/mosquitto.conf
@@ -1,6 +1,13 @@
 # Mosquitto MQTT Broker Configuration
 listener 1883
+protocol mqtt
+
+listener 9001
+protocol websockets
+
 allow_anonymous true
+log_type all
+
 # For production, set allow_anonymous false and configure password_file and ACLs
 # password_file /mosquitto/config/passwords.txt
 # acl_file /mosquitto/config/acls.txt
