--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared
     restart: unless-stopped
-    command: tunnel --no-autoupdate -url http://mosquitto:9001
+    command: tunnel --no-autoupdate --url http://mosquitto:9001
     depends_on:
       - mosquitto
     networks:
