Adds PyInstaller build scripts and docs for standalone executables
Enables easy distribution by providing PowerShell scripts to build standalone Windows executables for client and server using PyInstaller.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Python build artifacts
 build/
 dist/
+*.spec
 *.egg-info/
 .eggs/
+
+# PyInstaller builds
+build_scripts/*.zip
 
 # Byte-compiled / cache
 __pycache__/
