Improves log clarity and theme consistency in UI
Updates log formatting for sent and received MQTT messages to better match server-side output and highlight message types with color tags based on the current theme.

--- a/presentation_clicker_client/presentation_clicker_client/mqtt_config-template.yaml
+++ b/presentation_clicker_client/presentation_clicker_client/mqtt_config-template.yaml
@@ -2,5 +2,6 @@
 # Rename this file to mqtt_config.yaml and fill in your MQTT broker details.
 host: test.mosquitto.org
 port: 1883
+transport: tcp
 keepalive: 15
 theme: flatly
