--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ paho-mqtt
 cryptography
 keyboard
 pyyaml
+-e ./presentation_clicker_common
+-e ./presentation_clicker_client
+-e ./presentation_clicker_listener
